@@ -1,0 +1,7 @@
+package Sys::Socket::Error::InetInvalidNetworkAddress;
+
+1;
+
+=head1 Name
+
+Sys::Socket::Error::InetInvalidNetworkAddress - The address is not a valid network address.
