@@ -5,6 +5,8 @@ class TestCase::Sys::Socket {
   use Sys::Socket::Sockaddr::In;
   use Sys::Socket::Sockaddr::In6;
   
+  use Sys::Socket::Error::InetInvalidNetworkAddress;
+  
   static method htonl : int () {
     my $host_int = 20000;
     my $net_int = Sys::Socket->htonl($host_int);
@@ -168,7 +170,11 @@ class TestCase::Sys::Socket {
       
       $address->set_sin_family((byte)Socket->AF_INET);
       $address->set_sin_port(Sys::Socket->htons((short)$port));
-      Sys::Socket->inet_aton("127.0.0.1", $address->sin_addr);
+      my $status = Sys::Socket->inet_aton("127.0.0.1", $address->sin_addr);
+      
+      unless ($status == 1) {
+        return 0;
+      }
     }
 
     # IPv4
@@ -177,7 +183,10 @@ class TestCase::Sys::Socket {
       
       $address->set_sin_family((byte)Socket->AF_INET);
       $address->set_sin_port(Sys::Socket->htons((short)$port));
-      Sys::Socket->inet_pton(Socket->AF_INET, "127.0.0.1", $address->sin_addr);
+      my $status = Sys::Socket->inet_pton(Socket->AF_INET, "127.0.0.1", $address->sin_addr);
+      unless ($status == 1) {
+        return 0;
+      }
     }
     
     # IPv6
@@ -186,7 +195,10 @@ class TestCase::Sys::Socket {
       
       $address->set_sin6_family((byte)Socket->AF_INET6);
       $address->set_sin6_port(Sys::Socket->htons((short)$port));
-      Sys::Socket->inet_pton(Socket->AF_INET6, "::1", $address->sin6_addr);
+      my $status = Sys::Socket->inet_pton(Socket->AF_INET6, "::1", $address->sin6_addr);
+      unless ($status == 1) {
+        return 0;
+      }
     }
     
     return 1;
